add logo component

--- a/src/@core/components/footer/footer.component.html
+++ b/src/@core/components/footer/footer.component.html
@@ -5,7 +5,7 @@
         <div class="col-12 col-lg-5 mb-1 mb-lg-0">
           <div class="brand">
             <span class="brand-logo">
-              <img alt="brand-logo" height="36" src="assets/images/logo/new-logo.svg" width="48"/>
+              <logo [size]="36"/>
             </span>
             <h2 class="brand-text text-dark ms-1 fw-medium mb-0">KEP.uz</h2>
           </div>
