--- a/src/@core/components/header/header.component.html
+++ b/src/@core/components/header/header.component.html
@@ -12,7 +12,7 @@
       <div class="header-element">
         <div class="horizontal-logo ms-lg-4">
           <a [routerLink]="''" class="header-logo">
-            <img alt="logo" height="48" src="assets/images/logo/new-logo.svg">
+            <logo [size]="48"/>
             <span class="d-none d-lg-block">
               KEP.uz
             </span>
