--- a/src/app/modules/contests/pages/contest/contest-problems/contest-problems.component.html
+++ b/src/app/modules/contests/pages/contest/contest-problems/contest-problems.component.html
@@ -3,7 +3,7 @@
     <app-content-header [contentHeader]="contentHeader"></app-content-header>
 
     <div class="row">
-      <div [@fadeInOnEnter]="" class="col-lg-9 col-md-12 col-sm-12 order-2 order-lg-1">
+      <div class="col-lg-9 col-md-12 col-sm-12 order-2 order-lg-1">
         <kep-card>
           <div class="card-header p-1">
             <contest-tab [contest]="contest"></contest-tab>
