--- a/src/app/modules/contests/pages/contest/contest.component.html
+++ b/src/app/modules/contests/pages/contest/contest.component.html
@@ -2,7 +2,7 @@
   <div class="content-body">
     <app-content-header [contentHeader]="contentHeader"></app-content-header>
     <contest-card [contest]="contest"></contest-card>
-    <kep-card [@fadeInUpOnEnter]>
+    <kep-card >
       <div class="card-header p-1">
         <contest-tab [contest]="contest"></contest-tab>
       </div>
