--- a/src/app/modules/courses/pages/course/course-header/course-header.component.html
+++ b/src/app/modules/courses/pages/course/course-header/course-header.component.html
@@ -1,6 +1,6 @@
 <div class="course-page-top">
   <div class="course course-{{ course.id }}">
-    <div [@fadeInLeftOnEnter] class="course-header order-md-1 order-2">
+    <div  class="course-header order-md-1 order-2">
       <div class="course-info d-flex">
         <div class="course-level me-1">
           <span class="badge bg-success">
@@ -51,7 +51,7 @@
         </div>
       </div>
     </div>
-    <div [@fadeInUpOnEnter] class="course-image order-md-2 order-1">
+    <div  class="course-image order-md-2 order-1">
       <img alt="" src="{{ course.logo }}">
     </div>
   </div>
