--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
@@ -59,7 +59,7 @@
 
     <section class="mt-2">
       <div class="row">
-        <div [@fadeInOnEnter] class="col-lg-9 col-md-12 col-sm-12 order-2 order-lg-1">
+        <div  class="col-lg-9 col-md-12 col-sm-12 order-2 order-lg-1">
           <div class="layout-spacing">
             <kep-card>
               <div class="card-header p-1">
