--- a/src/app/modules/contests/pages/contest/contest-registrants/contest-registrants.component.html
+++ b/src/app/modules/contests/pages/contest/contest-registrants/contest-registrants.component.html
@@ -6,7 +6,7 @@
 
     <section class="mt-2">
       <div class="row">
-        <div [@fadeInLeftOnEnter] class="col-lg-9 col-12 order-2 order-lg-1">
+        <div  class="col-lg-9 col-12 order-2 order-lg-1">
           <kep-card>
             <div class="card-header p-2">
               <contest-tab [contest]="contest"></contest-tab>
