--- a/src/app/modules/challenges/components/challenge-card/challenge-card.component.html
+++ b/src/app/modules/challenges/components/challenge-card/challenge-card.component.html
@@ -1,5 +1,5 @@
 <kep-card customClass="mb-2">
-  <div [@fadeInOnEnter] class="table-responsive">
+  <div  class="table-responsive">
     <table class="table challenge-card">
       <tbody>
       <tr>
