--- a/src/app/shared/components/code-editor/code-editor-modal/code-editor-modal.component.scss
+++ b/src/app/shared/components/code-editor/code-editor-modal/code-editor-modal.component.scss
@@ -76,7 +76,7 @@
     background: white !important;
 
     @include dark-layout {
-      background: mix(black, var(--primary), 80) !important;
+      background: color-mix(in srgb, black 80%, var(--primary) 20%) !important;
     }
 
     .card-header {
