--- a/src/app/modules/problems/components/problem-body/problem1639/problem1639.component.scss
+++ b/src/app/modules/problems/components/problem-body/problem1639/problem1639.component.scss
@@ -48,7 +48,7 @@
 }
 
 .container {
-  background: linear-gradient(to right, var(--primary), mix(white, var(--primary), 20));
+  background: var(--primary);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   padding-top: 1rem;
