add disabled prop to kep-pagination

--- a/src/@core/components/header/notifications/header-notifications.component.html
+++ b/src/@core/components/header/notifications/header-notifications.component.html
@@ -138,6 +138,7 @@
         [boundaryLinks]="false"
         [pageSize]="10"
         [collectionSize]="total"
+        [disabled]="isLoading"
         [customClass]="'mb-2'">
       </kep-pagination>
     }
