--- a/src/app/modules/arena/pages/arena-tournament/arena-challenges/arena-challenges.component.html
+++ b/src/app/modules/arena/pages/arena-tournament/arena-challenges/arena-challenges.component.html
@@ -47,6 +47,7 @@
     [maxSize]="maxSize"
     [rotate]="true"
     [color]="'warning'"
+    [disabled]="isLoading"
     (pageChange)="reloadPage()">
   </kep-pagination>
 }
