--- a/src/app/modules/arena/pages/arena-tournament/arena-players/arena-players.component.html
+++ b/src/app/modules/arena/pages/arena-tournament/arena-players/arena-players.component.html
@@ -53,6 +53,7 @@
           [color]="'warning'"
           [pageOptions]="pageOptions"
           (pageSizeChange)="pageSizeChange($event)"
+          [disabled]="isLoading"
           (pageChange)="pageChange($event)">
         </kep-pagination>
       </div>
