--- a/src/app/modules/arena/pages/arena/arena.component.html
+++ b/src/app/modules/arena/pages/arena/arena.component.html
@@ -41,6 +41,7 @@
               [maxSize]="maxSize"
               [rotate]="true"
               [color]="'yellow'"
+              [disabled]="isLoading"
               (pageChange)="reloadPage()">
             </kep-pagination>
           </div>
