--- a/src/app/modules/blog/pages/blog-list/blog-list.component.html
+++ b/src/app/modules/blog/pages/blog-list/blog-list.component.html
@@ -19,6 +19,7 @@
             [maxSize]="maxSize"
             [rotate]="true"
             [color]="'yellow'"
+            [disabled]="isLoading"
             (pageChange)="reloadPage()">
           </kep-pagination>
         }
