--- a/src/app/modules/challenges/pages/challenges-rating/challenges-rating.component.html
+++ b/src/app/modules/challenges/pages/challenges-rating/challenges-rating.component.html
@@ -73,6 +73,7 @@
             [pageSize]="pageSize"
             [maxSize]="maxSize"
             [rotate]="true"
+            [disabled]="isLoading"
             (pageChange)="pageChange($event)">
           </kep-pagination>
         </ng-container>
