--- a/src/app/modules/challenges/pages/challenges/sections/section-challenges/section-challenges.component.html
+++ b/src/app/modules/challenges/pages/challenges/sections/section-challenges/section-challenges.component.html
@@ -14,6 +14,7 @@
     [pageSize]="pageSize"
     [collectionSize]="total"
     [maxSize]="maxSize"
+    [disabled]="isLoading"
     (pageChange)="reloadPage()">
   </kep-pagination>
 </div>
