--- a/src/app/modules/challenges/pages/user-statistics/section-last-challenges/section-last-challenges.component.html
+++ b/src/app/modules/challenges/pages/user-statistics/section-last-challenges/section-last-challenges.component.html
@@ -15,5 +15,6 @@
   (pageChange)="reloadPage()"
   [collectionSize]="total"
   [maxSize]="maxSize"
+  [disabled]="isLoading"
   [pageSize]="pageSize">
 </kep-pagination>
