--- a/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.html
+++ b/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.html
@@ -25,6 +25,7 @@
             [maxSize]="maxSize"
             [pageOptions]="pageOptions"
             [pageSize]="pageSize"
+            [disabled]="isLoading"
             [page]="pageNumber">
           </kep-pagination>
         }
