--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
@@ -45,6 +45,7 @@
     [maxSize]="maxSize"
     [pageOptions]="pageOptions"
     [pageSize]="pageSize"
+    [disabled]="isLoading"
     [rotate]="true">
   </kep-pagination>
 </section>
