--- a/src/app/modules/contests/pages/contests/contests.component.html
+++ b/src/app/modules/contests/pages/contests/contests.component.html
@@ -37,6 +37,7 @@
             [(page)]="pageNumber"
             [collectionSize]="total"
             [maxSize]="maxSize"
+            [disabled]="isLoading"
             [pageOptions]="pageOptions"
             [pageSize]="pageSize"
             [rotate]="true">
