--- a/src/app/modules/contests/pages/user-contests/user-contests.component.html
+++ b/src/app/modules/contests/pages/user-contests/user-contests.component.html
@@ -26,6 +26,7 @@
               [(page)]="pageNumber"
               [collectionSize]="total"
               [maxSize]="maxSize"
+              [disabled]="isLoading"
               [pageSize]="pageSize">
             </kep-pagination>
           }
