--- a/src/app/modules/problems/pages/problems/sections/section-problems-list/section-problems-list.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-list/section-problems-list.component.html
@@ -26,6 +26,7 @@
       [pageSize]="pageSize"
       [maxSize]="maxSize"
       [rotate]="true"
+      [disabled]="isLoading"
       [boundaryLinks]="false"
       [ellipses]="true"
       (pageSizeChange)="pageSizeChange($event)"
