--- a/src/app/modules/problems/pages/rating/rating.component.html
+++ b/src/app/modules/problems/pages/rating/rating.component.html
@@ -79,6 +79,7 @@
               (pageSizeChange)="pageSizeChange($event)"
               [collectionSize]="total"
               [maxSize]="maxSize"
+              [disabled]="isLoading"
               [pageOptions]="pageOptions"
               [pageSize]="pageSize"
               [page]="pageNumber">
