--- a/src/app/modules/projects/ui/components/project-attempts/project-attempts.component.html
+++ b/src/app/modules/projects/ui/components/project-attempts/project-attempts.component.html
@@ -17,6 +17,7 @@
     [pageSize]="pageSize"
     [maxSize]="maxSize"
     [rotate]="true"
+    [disabled]="isLoading"
     [color]="'info'"
     [pageOptions]="pageOptions"
     (pageSizeChange)="pageSizeChange($event)"
