--- a/src/app/modules/users/ui/pages/users-list/users-list.page.html
+++ b/src/app/modules/users/ui/pages/users-list/users-list.page.html
@@ -240,6 +240,7 @@
             [(page)]="pageNumber"
             [collectionSize]="total"
             [maxSize]="maxSize"
+            [disabled]="isLoading"
             [pageOptions]="pageOptions"
             [pageSize]="pageSize"
           ></kep-pagination>
