--- a/src/app/modules/contests/pages/rating/rating.component.html
+++ b/src/app/modules/contests/pages/rating/rating.component.html
@@ -47,6 +47,7 @@
                 [maxSize]="maxSize"
                 [pageOptions]="pageOptions"
                 [pageSize]="pageSize"
+                [disabled]="isLoading"
                 [rotate]="true">
               </kep-pagination>
             }
