--- a/src/app/modules/problems/pages/attempts/attempts.component.html
+++ b/src/app/modules/problems/pages/attempts/attempts.component.html
@@ -21,6 +21,7 @@
           (pageSizeChange)="pageSizeChange($event)"
           [collectionSize]="total"
           [maxSize]="maxSize"
+          [disabled]="isLoading"
           [pageOptions]="pageOptions"
           [pageSize]="pageSize"
           [page]="pageNumber">
