--- a/src/app/modules/problems/pages/problem/problem-attempts/problem-attempts.component.html
+++ b/src/app/modules/problems/pages/problem/problem-attempts/problem-attempts.component.html
@@ -31,6 +31,7 @@
     (pageSizeChange)="pageSizeChange($event)"
     [collectionSize]="total"
     [maxSize]="maxSize"
+    [disabled]="isLoading"
     [pageOptions]="pageOptions"
     [pageSize]="pageSize"
     [page]="pageNumber">
