--- a/src/app/modules/problems/pages/problems/sections/section-problems-table/section-problems-table.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-table/section-problems-table.component.html
@@ -138,6 +138,7 @@
           [pageSize]="pageSize"
           [maxSize]="maxSize"
           [rotate]="true"
+          [disabled]="isLoading"
           [boundaryLinks]="false"
           [ellipses]="true"
           (pageSizeChange)="pageSizeChange($event)"
