--- a/src/app/modules/tournaments/ui/pages/tournaments-list/tournaments-list.page.html
+++ b/src/app/modules/tournaments/ui/pages/tournaments-list/tournaments-list.page.html
@@ -40,6 +40,7 @@
               [pageSize]="pageSize"
               [maxSize]="maxSize"
               [rotate]="true"
+              [disabled]="isLoading"
               [color]="'primary'"
               (pageChange)="reloadPage()">
             </kep-pagination>
