--- a/src/app/shared/components/kep-pagination/kep-pagination.component.html
+++ b/src/app/shared/components/kep-pagination/kep-pagination.component.html
@@ -7,6 +7,7 @@
     [ellipses]="ellipses"
     [rotate]="rotate"
     [boundaryLinks]="boundaryLinks"
+    [disabled]="disabled"
     (pageChange)="change($event)"
     class="d-flex justify-content-center pagination-{{ color }} {{ customClass }}">
     <ng-template ngbPaginationFirst>
