--- a/src/app/modules/contests/components/contestant-view/contestant-view.component.html
+++ b/src/app/modules/contests/components/contestant-view/contestant-view.component.html
@@ -24,7 +24,7 @@
     } )
   </div>
 } @else if (user?.username) {
-  <div claas="d-flex justify-content-between align-items-center">
+  <div class="d-flex justify-content-between align-items-center">
     <contests-rating-image
       [title]="user.ratingTitle"
       [class]="'me-1 mb-50'"
