--- a/src/app/shared/components/user-popover/user-popover/user-popover.component.html
+++ b/src/app/shared/components/user-popover/user-popover/user-popover.component.html
@@ -38,7 +38,7 @@
   triggers="mouseenter:mouseleave"
 >
   @if (!customContent) {
-    <span>
+    <span class="fw-medium">
       {{ username }}
     </span>
   }
