shrifntni Comfortaa ga ozgartirish

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -116,9 +116,9 @@ $youtube: #FF0000;
 
 :root {
   color-scheme: light;
-  --primary: #4d4ae8;
+  --primary: #00ae90;
   --body-bg-rgb: 145, 175, 19;
-  --primary-rgb: 77, 74, 232;
+  --primary-rgb: 0, 174, 144;
   --secondary-rgb: 0, 227, 210;
   --warning-rgb: 235, 247, 72;
   --info-rgb: 72, 247, 238;
@@ -144,7 +144,7 @@ $youtube: #FF0000;
   --primary08: rgba(var(--primary-rgb), 0.8);
   --primary09: rgba(var(--primary-rgb), 0.9);
   --primary005: rgba(var(--primary-rgb), 0.05);
-  --default-font-family: 'Rajdhani', 'Exo 2', sans-serif;
+  --default-font-family: 'Comfortaa', sans-serif;
   --default-font-weight: 400;
   --default-text-color: #000;
   --default-text-color-rgb: 51, 51, 51;
