--- a/src/app/shared/components/logo/logo.component.html
+++ b/src/app/shared/components/logo/logo.component.html
@@ -1,1 +1,1 @@
-<img alt="brand-logo" src="assets/images/logo/logo-{{ themeMode }}.svg" [height]="size"/>
+<img alt="brand-logo" src="assets/images/logo/logo-dark.svg" [height]="size"/>
