--- a/src/app/modules/landing-page/sections/section-reviews/section-reviews.component.html
+++ b/src/app/modules/landing-page/sections/section-reviews/section-reviews.component.html
@@ -81,10 +81,10 @@
 <!--          <p>{{ 'LandingPage.SectionReviewsText' | translate }}</p>-->
 
 <!--          <div class="mt-3 mb-1 d-flex justify-content-start">-->
-<!--            <button aria-label="prev" rippleEffect class="btn btn-sm bg-light-primary">-->
+<!--            <button aria-label="prev" rippleEffect class="btn btn-sm bg-primary-transparent">-->
 <!--              <kep-icon name="arrow-left" color="primary" class=""></kep-icon>-->
 <!--            </button>-->
-<!--            <button aria-label="next" rippleEffect class="ms-1 btn btn-sm bg-light-primary">-->
+<!--            <button aria-label="next" rippleEffect class="ms-1 btn btn-sm bg-primary-transparent">-->
 <!--              <kep-icon name="arrow-right" color="primary" class=""></kep-icon>-->
 <!--            </button>-->
 <!--          </div>-->
