--- a/src/app/modules/problems/pages/problems/sections/section-problems-list/problem-card/problem-card.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-list/problem-card/problem-card.component.html
@@ -58,7 +58,7 @@
         }
 
         @if (problem.hidden) {
-          <span class="badge mt-2 badge-pill bg-light-warning">
+          <span class="badge mt-2 badge-pill bg-warning-transparent">
             <i [data-feather]="'eye-off'" class="text-warning" [size]="'16px'"></i>
             {{ 'Hidden' | translate }}
           </span>
