--- a/src/app/modules/problems/pages/problems/sections/section-problems-table/section-problems-table.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-table/section-problems-table.component.html
@@ -84,7 +84,7 @@
             }
 
             @if (problem.hidden) {
-              <span class="badge mt-2 badge-pill bg-light-warning">
+              <span class="badge mt-2 badge-pill bg-warning-transparent">
                 {{ 'Hidden' | translate }}
               </span>
             }
