--- a/src/app/modules/users/ui/components/users-chart-card/users-chart-card.component.html
+++ b/src/app/modules/users/ui/components/users-chart-card/users-chart-card.component.html
@@ -4,7 +4,7 @@
       <h2 class="fw-semibold text-dark">{{ usersTotal }}</h2>
       <div class="font-small-4 text-dark">{{ 'Users' | translate }}</div>
     </div>
-    <div class="avatar bg-light-primary p-50">
+    <div class="avatar bg-primary-transparent p-50">
       <div class="avatar-content">
         <kep-icon name="user" class="font-medium-4"></kep-icon>
       </div>
