--- a/src/app/modules/blog/pages/blog-list/blog-list.component.html
+++ b/src/app/modules/blog/pages/blog-list/blog-list.component.html
@@ -66,7 +66,7 @@
               <div (click)="filter.topic=1; reloadPage()" [ngClass]="{'active': filter.topic == 1}"
                    class="blog-topic mt-1">
                 <div class="d-flex justify-content-start align-items-center mb-75">
-                  <div class="avatar rounded bg-light-primary">
+                  <div class="avatar rounded bg-primary-transparent">
                     <div class="avatar-content">
                       <i data-feather="slack"></i>
                     </div>
