--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.scss
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.scss
@@ -14,7 +14,7 @@
     color: var(--text-color);
   }
 
-  .bg-light-primary {
+  .bg-primary-transparent {
     background-color: var(--bg-light) !important;
   }
 
