--- a/src/app/modules/problems/components/hack-attempts-table/table/table.component.html
+++ b/src/app/modules/problems/components/hack-attempts-table/table/table.component.html
@@ -18,7 +18,7 @@
       @for (hackAttempt of hackAttempts; track identify(i, hackAttempt); let i = $index) {
         <tr
 
-          [ngClass]="{'bg-light-primary': hackAttempt.hackerUsername == currentUser?.username}">
+          [ngClass]="{'bg-primary-transparent': hackAttempt.hackerUsername == currentUser?.username}">
           <td>
             {{ hackAttempt.id }}
           </td>
