--- a/src/app/modules/problems/components/problems-activity-card/problems-activity-card.component.html
+++ b/src/app/modules/problems/components/problems-activity-card/problems-activity-card.component.html
@@ -26,7 +26,7 @@
           'col-12': activitySolved == 0
         }">
             <div class="text-center">
-              <div class="avatar bg-light-primary p-50 m-0 mb-1">
+              <div class="avatar bg-primary-transparent p-50 m-0 mb-1">
                 <div class="avatar-content">
                   <kep-icon class="font-medium-3" name="check-circle"></kep-icon>
                 </div>
