--- a/src/app/styles/vuexy-extended/content.scss
+++ b/src/app/styles/vuexy-extended/content.scss
@@ -31,3 +31,11 @@ pre {
 img {
   max-width: 100%;
 }
+
+.table-striped tr:nth-of-type(even) {
+  background-color: $gray-200;
+
+  @include dark-layout {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+}
