--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -149,7 +149,7 @@ $youtube: #FF0000;
   --default-text-color: #000;
   --default-text-color-rgb: 51, 51, 51;
   --default-border: #f3f3f3;
-  --default-body-color: #ffffff;
+  --default-body-color: #ececec;
   --default-background: linear-gradient(to bottom right, var(--default-body-color) 0%, var(--theme-bg-gradient) 25%, var(--default-body-color) 100%);
   --menu-bg: #fff;
   --menu-prime-color: rgba(255, 255, 255, 1);
