--- a/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.scss
+++ b/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.scss
@@ -108,7 +108,7 @@ contest-card {
       }
     }
 
-    .badge {
+    .badge:not(.bg-success, .bg-danger) {
       background-color: var(--bg) !important;
     }
   }
