--- a/src/app/shared/components/user-popover/user-popover/user-popover.component.scss
+++ b/src/app/shared/components/user-popover/user-popover/user-popover.component.scss
@@ -7,12 +7,16 @@
     margin-bottom: 0;
 
     .card-body {
-      background: color-mix(in srgb, black 90%, var(--primary) 10%);
+      background: white;
+
+      @include dark-layout {
+        background: color-mix(in srgb, black 90%, var(--primary) 10%);
+      }
     }
   }
 
   .popover-body {
-    padding: 0px !important;
+    padding: 0 !important;
     width: 400px !important;
     box-shadow: none !important;
     border: none !important;
